--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -85,6 +85,54 @@
 			&::after
 				opacity: .32
 
+.portfolio-section
+	padding: 10px
+	grid-template-columns: repeat(4, 1fr)
+	grid-gap: 10px
+
+.portfolio-item
+	min-height: 32vh
+	background-size: cover
+	background-position: center
+	text-align: center
+	align-content: center
+	padding: $gutter
+	font-size: 20px
+	font-weight: bold
+	color: #fff
+	position: relative
+	transition: color .5s ease
+	cursor: pointer
+	&:hover
+		color: $accent
+		&::before
+			opacity: .85
+	&:before
+		content: ''
+		position: absolute
+		top: 0
+		right: 0
+		bottom: 0
+		left: 0
+		background-color: $dark
+		opacity: .65
+		transition: opacity .5s ease
+	> *
+		z-index: 1
+	
+	&:nth-child(1)
+		grid-column: 1 / 3 
+
+	&:nth-child(5)
+		grid-column: 2 / 4
+	&:nth-child(6)
+		grid-column: 4
+		grid-row: 2 / 4
+
+.buttoncase
+	grid-column: 1 / 5
+	padding: $gutter $gutter 50px
+
 
 
 @import "media" // Всегда в конце
