--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -188,4 +188,68 @@ input, textarea
 	&::placeholder
 		color: ligten($dark, 20%)
 
+.section-blog
+	h2 
+		margin:
+			top: 0
+			bottom: 50px
+
+.blog-home 
+	grid-gap: $gutter
+	grid-template-columns: repeat(4, 1fr)
+	.blog-item
+		background-color: #F7F7F7
+		text-decoration: none
+		grid-template-rows: 1fr 1fr
+		transition: background-color .25s ease
+		overflow: hidden
+		color: #333
+		&:nth-child(3)
+			grid-column: 3 / 5
+		&:nth-child(4)
+			grid-column: 1 / 3
+		&:hover 
+			background-color: $light
+			h4 
+				color: $dark
+			.blog-item-img
+				transform: scale(1.05) translateY(-6.5px)
+		&-img 
+			height: 270px
+			background-size: cover
+			background-position: center
+			transition: transform .25s ease
+		&-content 
+			padding: 25px
+			text-align: center
+			align-content: center
+			h4 
+				font-size: 18px
+				color: #666
+				line-height: 1.3
+				margin: 0
+				transition: color .25s ease
+			p 
+				font-size: 16px
+				margin: 20px 0
+			.buttoncase 
+				padding: 0
+.main-footer
+	padding: 60px 0
+	background-color: darken($dark, 8%)
+	text-align: center
+	color: #4E5355
+.footer-logo 
+	font-family: intro-grid, sans-serif
+	font-size: 22px
+	line-height: 1.16
+	span 
+		display: block
+		color: #707476
+		font-size: 27px
+.footer-copy 
+	font-size: 20px
+	font-weight: bold
+	color: #494D50
+	margin-top: 20px
 @import "media" // Всегда в конце
